# obs-harness

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.ssl/: cert.pem  key.pem
docs/: API.md  GETTING_STARTED.md
docs/images/: .gitkeep
src/obs_harness/: __init__.py  __main__.py  app.py  chat_pipeline.py  database.py  elevenlabs.py  elevenlabs_ws.py  models.py  openrouter.py  santa_session.py  ssl_utils.py  tts_pipeline.py  twitch_chat.py  twitch_eventsub.py
src/obs_harness/tts/: __init__.py  cartesia.py  cartesia_ws.py  elevenlabs_ws.py  provider.py
static/: channel.html  dashboard.html  editor.html  santa.html  twitch.html
static/js/: channel.js  dashboard.js  santa.js  text-animator.js
