[project]
name = "obs-harness"
version = "0.1.0"
description = "Push audio and animated text to OBS via browser sources"
readme = "README.md"
authors = [
    { name = "digibugcat", email = "digibugcat@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.3.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "python-dotenv>=1.2.1",
    "cryptography>=44.0.0",
]

[project.scripts]
obs-harness = "obs_harness.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
